--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="stye.css">
 </head>
 <body>
-    <h1>Un super titre</h1>
+    <h1>Un super titre !</h1>
 </body>
 </html>
